tests/snapshots/structure__package_lib__fail__virtual_workspace_single_package_bin_target.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure
--package
package_bin_target
--lib

STDERR:
Error: No library target found.

Targets present in package:
- package_bin_target (--bin package_bin_target)


STDOUT:
