tests/snapshots/structure__package_lib__fail__workspace_single_package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--package
package_bin_target
--lib

STDERR:
Error: No library target found.

Targets present in package:
- package_bin_target (--bin package_bin_target)


STDOUT:
